fix z-index for sticky top and in process adaptive order pages

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -6264,8 +6264,8 @@ button {
     max-width: 1250px;}
   .max-1485 {
     max-width: 1485px;}
-  .max-1580 {
-    max-width: 1580px;}
+  .max-1520 {
+    max-width: 1520px;}
   .max-1750 {
     max-width: 1750px;}
   .max-1045 {
@@ -8954,7 +8954,7 @@ padding-top: 15px;}
   position: fixed;
   top: 60px;
   left: 0;
-  z-index: 99;
+  z-index: 8;
   width: 100%;
   transition: all 0.2s ease;}
 .fix-top-tabs.active {
